[package]
name = "h_2_0"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.21"
axstd = { workspace = true, features = ["alloc", "paging", "fs", "multitask", "irq"] }
axhal = { workspace = true }
axmm = { workspace = true }
riscv_vcpu = { git = "https://github.com/arceos-hypervisor/riscv_vcpu.git" }
axerrno = "0.1"
memory_addr = "0.3"
